# RAG

adaptive_rag/: .env.example  Dockerfile  README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
adaptive_rag/data/: ingest.py  preprocessing.md
adaptive_rag/frontend/: Dockerfile  package-lock.json  package.json
adaptive_rag/frontend/src/: middleware.ts
adaptive_rag/frontend/src/app/: page.tsx
adaptive_rag/frontend/src/app/api/auth/[...nextauth]/: route.ts
adaptive_rag/frontend/src/app/api/v1/[...slug]/: route.ts
adaptive_rag/frontend/src/app/login/: page.tsx
adaptive_rag/graph/: consts.py  graph.py  state.py
adaptive_rag/graph/chains/: answer_grader.py  generation.py  generator.py  hallucination_grader.py  llm.py  retrieval_grader.py  router.py
adaptive_rag/graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
self_improving_rag/: .env.example  README.md  display.py  llm.py  main.py  pyproject.toml
self_improving_rag/data/: download_raw_data.py  process_mimic.py  process_unstructured.py
self_improving_rag/graph/: analyst.py  architect.py  diagnostician.py  evaluator.py  graph.py  planner.py  retriever.py  sop_pool.py  states.py  synthesizer.py  teamsop.py
